// This file uses all features necessary to generate flatbuffers schema from protobuf.

syntax = "proto3";

package fbs;

enum ByteEnum {
  Default = 0;
}

enum LongEnum {
  Unused = 0;
}

enum Enum {
  Red = 0;
  Green = 1;
  Blue = 2;
}

message OtherTableA {
  string val = 1;
}

message OtherTableB {
  string val = 1;
}

message Union {
  OtherTableA a = 1;
  OtherTableA b = 2;
}

message Struct {
  float x = 1;
  float y = 2;
  float z = 3;
}

message Table {
  bool bool_value = 1;
  int32 byte_value = 2;
  int32 ubyte_value = 3;
  int32 short_value = 4;
  int32 ushort_value = 5;
  int32 i32_value = 6;
  uint32 u32_value = 7;
  float f32_value = 8;
  int64 i64_value = 9;
  uint64 u64_value = 10;
  double f64_value = 11;
  string str_value = 12;
  Enum enum_value = 13;
  Struct struct_value = 14;
  OtherTableA table_value = 15;
  Union union_value = 16;

  int32 value_with_attrs_and_default = 17;
}
